tests/run-pass/typeck/different-fns.rs
fn foo() {
    let a: int = 2;
    a += 4;
}

fn bar() {
    let a: bool = false;
    a |= true;
}

fn main() {}