tests/compile-fail/typeck/if-with-invalid-cond.rs
fn main() {
    if 2 {}  //! ERROR(2:8): type mismatch: expected bool, got int
}